--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-Flask==2.2.3
+Flask==2.3.2
 psycopg2-binary==2.9.6
 Flask-SQLAlchemy==3.0.3
 Flask-Migrate==4.0.4
 Flask-Cors==3.0.10
 gunicorn==20.1.0
 validator==0.7.1
+pytest==7.3.1
+bandit==1.7.5
